classDiagram
    class PaymentService {
        <<abstract>>
        + add()
        # getExchangeRate()*
    }
    class HttpApiPaymentService {
        # getExchangeRate()
    }
    class SimplePaymentService {
        # getExchangeRate()
    }

    PaymentService <|-- HttpApiPaymentService
    PaymentService <|-- SimplePaymentService